layout issue portfolio fixed

--- a/assets/themes/dmode/stylesheets/app.css
+++ b/assets/themes/dmode/stylesheets/app.css
@@ -75,11 +75,11 @@ ul.navigation-bar li a {
 }
 
 ul.navigation-bar li a:hover{
-background-color:#3E8498;
+	background-color:#3E8498;
 }
 
 ul.navigation-bar li.active{
-background-color:#3E8498;
+	background-color:#3E8498;
 }
 
 .company-name-small {
@@ -91,27 +91,16 @@ background-color:#3E8498;
    Portfolio
 ----------------------------------------- */
 
-/* body {
-background-color: #654;
-font-family: arial;
-}
-
-#wrapper {
-text-align: center;
-} */
-
-/* #portfolio {
-position: relative;
-margin: 0 auto;
-width: 750px;
-}  */
+#portfolio {
+	position: relative;
+}  
 
 .portfolio {
-float: left;
-list-style: none;
-border: 0;
-margin: 0;
-padding: 0;
+	float: left;
+	list-style: none;
+	border: 0;
+	margin: 0;
+	padding: 0;
 }
 
 .portfolio div {
@@ -125,34 +114,35 @@ padding: 0;
 }
 
 .portfolio li:hover div, .portfolio li:active div, .portfolio li:focus div {
-position: absolute;
-z-index: 3;
-left: 0px;
-bottom: 30px;
-height: 170px;
-text-align: left;
-color: #fff;
-opacity: 1;
-background: rgb(150,140,130);
-background: rgba(150,140,130,.9);
+	position: absolute;
+	z-index: 3;
+	left: 0px;
+	bottom: 30px;
+	height: 170px;
+	text-align: left;
+	color: #fff;
+	opacity: 1;
+	background: rgb(150,140,130);
+	background: rgba(150,140,130,.9);
 }
 
 .portfolio div h3, .portfolio div p {
-margin: 10px 20px 20px 20px;
-padding:  0;
+	margin: 10px 20px 20px 20px;
+	padding:  0;
 }
 .portfolio div h3 {
-margin-top: 30px;
+	margin-top: 30px;
+	font-size: 22px;
 }
 
 .portfolio li {
-float: left;
-text-align: left;
-width: 250;
-height: 200;
-margin: 0;
-padding:  0;
-position: relative;
+	float: left;
+	text-align: left;
+	width: 250px;
+	height: 200px;
+	margin: 0;
+	padding:  0;
+	position: relative;
 }
 
 .portfolio li a img {
